--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "lunchly",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
@@ -18,5 +18,7 @@
   "devDependencies": {
     "jest": "^26.6.3",
     "supertest": "^6.1.3"
-  }
+  },
+  "keywords": [],
+  "description": ""
 }
